20080910:
- new feature: support for multiple ouptuts
- new LICENSE: GPLv3
- fixed a race-condition in logging
- adjusted CFLAGS for gcc
- warn about LD_LIBRARY_PATH interfering with build process
- the exitcode of autoloader command should be checked
- changed default buffer size to use 2% of available memory
- changed default block size to system pagesize
- added make target for lint

20080507:
- memory locking for file fails if -L is passed before -T
- use MAP_SHARED instead of MAP_PRIVATE to simplify fork in system
- missing arguments may cause a SegV
- $(LIBS) should be after $(OBJECTS)

20080502:
- better support for device special files
  (files under /dev shouldn't need -f to write to)
- update to always handle largefile correctly
- fix configure script for sendfile functionality
- allow in-memory locking of file based buffers
- minor docu updates
- minor build update
  (compile with -c -O, mbuffer.o is dependent on Makefile)

20080329:
- configure should check if ST_BLKSIZE feature is available
- compile with -O instead of -g per default
- hostnames may have underscores and/or dash
- orthographic fix
- use inline and restrict if available
- honor --disable-assert
- use directio for input, too

20080212:
- fixed a race-condition causing incorrectly written last block

20080122:
- fix wrong assertion on dup2
- fix 'make distclean' to also remove mbuffer.exe
- fix installation of manpage

20080104:
- updated status display
- POSIX conformance update: read from stderr instead of relying on
  /dev/tty exists, fallback to /dev/tty if stderr is unreadable
- update to build on HPUX.11 (thanks go to testdrive.hp.com)
- several configure fixes and updates
- fixed invalid exitcode without console (Alex Kramarov)
- correction for full/empty report

20070911:
- bugfix: search for MD5 functions with correct function names

20070826:
- bugfix: search for MD5 functions in libcrypto instead of libssl
- bugfix: search for MD5 functions in libmd5 using different function