@@ -5,7 +5,7 @@ AC_CANONICAL_SYSTEM
 AC_EXEEXT
 
 PACKAGE=mbuffer
-VERSION=20080910
+VERSION=20081014
 
 if test "${LD_LIBRARY_PATH}" != "" ; then
 	echo ""
